// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Custom 1`] = `
<button
  className="px-2 py-1 rounded-sm bg-red-400 border-2 border-blue-500 text-white"
  type="button"
>
  Custom classes
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="px-2 py-1 rounded-sm bg-purple-400 text-white-100"
  type="button"
>
  Default Button
</button>
`;

exports[`Storyshots Checkbox Default 1`] = `
<label
  className="checkbox"
>
  <input
    checked={true}
    disabled={true}
    type="checkbox"
  />
  <div
    className="checkbox-container"
  >
    <div
      className="checkbox-indicator"
    />
  </div>
</label>
`;

exports[`Storyshots Expandable Default 1`] = `
<div
  className="expanded"
>
  <header
    className="expanded-header"
  >
    <div
      className="flex items-center cursor-pointer"
      onClick={[Function]}
    >
      <svg
        aria-roledescription="menu"
        className="expanded"
        role="presentation"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
      <div
        className="flex-grow"
      >
        hello
      </div>
    </div>
  </header>
  Show me
</div>
`;

exports[`Storyshots Expandable Fancy 1`] = `
<div
  className="expanded"
>
  <header
    className="expanded-header"
  >
    <div
      className="flex items-center cursor-pointer"
      onClick={[Function]}
    >
      <svg
        aria-roledescription="menu"
        className="expanded"
        role="presentation"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style={
            Object {
              "fill": "currentColor",
            }
          }
        />
      </svg>
      <div
        className="flex-grow"
      >
        <strong>
          Bold Header
        </strong>
      </div>
    </div>
  </header>
  These things can hold 
  <em>
    React
  </em>
   components. Any valid JSX is fine for either the header or the children.
</div>
`;

exports[`Storyshots FormField Custom 1`] = `
<label
  className="flex flex-col"
>
  <span
    className="form-field-label font-semibold"
  >
    <div
      className="flex justify-between"
    >
      <div>
        Text Content
      </div>
      <div
        className="text-yellow-500"
      >
        Action items
      </div>
    </div>
  </span>
  <div
    className="form-field-control"
  >
    <input
      className="px-2 py-1 border rounded"
      disabled={false}
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
</label>
`;

exports[`Storyshots FormField Default 1`] = `
<label
  className="flex flex-col"
>
  <span
    className="form-field-label font-semibold"
  >
    With a string
  </span>
  <span
    className="text-gray-500 text-sm"
  >
    (optional) description
  </span>
  <div
    className="form-field-control"
  >
    <input
      className="px-2 py-1 border rounded"
      disabled={false}
      onChange={[Function]}
      type="text"
    />
  </div>
</label>
`;

exports[`Storyshots Input Default 1`] = `
<input
  className="px-2 py-1 border rounded"
  disabled={false}
  onChange={[Function]}
  placeholder="Placeholder"
  type="text"
/>
`;

exports[`Storyshots Loading Custom Icon 1`] = `
<div
  className="loading flex items-center"
>
  <svg
    role="presentation"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
  >
    <style>
      @keyframes spin { to { transform: rotate(360deg) } }
    </style>
    <g
      style={
        Object {
          "animation": "spin linear 1.5s infinite",
          "transformOrigin": "center",
        }
      }
    >
      <path
        d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"
        style={
          Object {
            "fill": "currentColor",
          }
        }
      />
      <rect
        fill="transparent"
        height="24"
        width="24"
      />
    </g>
  </svg>
  Loading
  ...
</div>
`;

exports[`Storyshots Loading Default 1`] = `
<div
  className="loading flex items-center"
>
  <svg
    role="presentation"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
  >
    <style>
      @keyframes spin { to { transform: rotate(360deg) } }
    </style>
    <g
      style={
        Object {
          "animation": "spin linear 1.5s infinite",
          "transformOrigin": "center",
        }
      }
    >
      <path
        d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
        style={
          Object {
            "fill": "currentColor",
          }
        }
      />
      <rect
        fill="transparent"
        height="24"
        width="24"
      />
    </g>
  </svg>
  Custom
  ...
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="modal"
  onClick={[Function]}
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="bg-gray-50 rounded w-full md:w-2/3 px-2 md:py-2 md:px-3 shadow-sm"
  >
    <header
      className="modal-header flex justify-between"
    >
      <div
        className="font-semibold"
      >
        Title Text (can be valid JSX)
      </div>
      <div
        className="closeButton text-gray-300 hover:text-gray-500"
        onClick={[Function]}
      >
        <svg
          role="presentation"
          style={
            Object {
              "height": "1.2000000000000002rem",
              "width": "1.2000000000000002rem",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            style={
              Object {
                "fill": "currentColor",
              }
            }
          />
        </svg>
      </div>
    </header>
    Content Text; can be valid JSX
    <footer
      className="modal-footer flex justify-end py-2 border-t border-gray-300 "
    >
      <button
        className="px-2 py-1 rounded-sm bg-gray-400"
        onClick={[Function]}
        type="button"
      >
        Cancel Text (JSX)
      </button>
      <button
        className="px-2 py-1 rounded-sm bg-purple-400 text-white-100 ml-1"
        onClick={[Function]}
        type="button"
      >
        Confirm Text (JSX)
      </button>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Tabs Examples Default 1`] = `
<div
  className="tabs-container"
>
  <header
    className="flex"
  />
  <div
    className="tab-group"
  />
</div>
`;

exports[`Storyshots Textarea Default 1`] = `
<textarea
  className="border border-gray-300 py-1 px-2 rounded"
  disabled={false}
  onChange={[Function]}
  placeholder="Placeholder text"
  value="v
e
r
y
 
l
o
n
g
 
t
e
x
t"
/>
`;

exports[`Storyshots Textarea Full Width 1`] = `
<textarea
  className="border border-gray-300 py-1 px-2 rounded w-full"
  disabled={false}
  onChange={[Function]}
  value="v
e
r
y
 
l
o
n
g
 
t
e
x
t"
/>
`;
